# jpeg-overlay-service

./: .gitignore  CMakeLists.txt
include/config/: config.hpp
include/server/: interceptors.hpp  server.hpp
include/service/: hello_service.hpp
src/: main.cpp
src/server/: server.cpp
src/service/: hello_service.cpp
